# Capstone

./: .gitignore  .gitmodules  Makefile  paper_note.md  pyproject.toml  readme.md  requirements.txt  trainer_t2m_trans_wrapper.py  trainer_vq_vae.py  trainer_vq_vae_wrapper.py.deplicated
configs/: add_hand_relative_absolute_angle.yaml  compute_fid.yaml  convert_pos_to_rel_angle_hand.yaml  data_preparation.lanta.yaml  data_preparation.yaml  deblur_vdo_using_BIN.yaml  get_output_text_from_name.yaml  interpolate_missing_landmarks.yaml  scraped_data_preparation.yaml  trainer_t2m_trans_wrapper.original_paper.yaml  trainer_t2m_trans_wrapper.yaml  trainer_vq_vae.best.posi.finetune.hand.yaml  trainer_vq_vae.best.posi.original_paper.hand.yaml  trainer_vq_vae.best.posi2.finetune.hand.yaml  trainer_vq_vae.best.posi2.original_paper.hand.yaml  trainer_vq_vae.best.rel_n.finetune.hand.yaml  trainer_vq_vae.best.rel_n.original_paper.hand.yaml  trainer_vq_vae.finetune.all.cbr.yaml  trainer_vq_vae.finetune.all.nwp.yaml  trainer_vq_vae.finetune.all.slr.yaml  trainer_vq_vae.finetune.all.yaml  trainer_vq_vae.finetune.body.cbr.yaml  trainer_vq_vae.finetune.body.yaml  trainer_vq_vae.finetune.core.nwp.yaml  trainer_vq_vae.finetune.face.cbr.yaml  trainer_vq_vae.finetune.face.nwp.yaml  trainer_vq_vae.finetune.face.yaml  trainer_vq_vae.finetune.hand.bmc.yaml  trainer_vq_vae.finetune.hand.ipl.lqd.yaml  trainer_vq_vae.finetune.hand.ipl.yaml  trainer_vq_vae.finetune.hand.nwp.yaml  trainer_vq_vae.original_paper.all.yaml  trainer_vq_vae.original_paper.body.yaml  trainer_vq_vae.original_paper.core.yaml  (+41 more)
(+100 files in other folders)
