[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "capstone_codebase"
version = "2024.0.0"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "lightning==2.4.0",
    "scipy==1.14.1",
    "matplotlib==3.9.2",
    "clip @ git+https://github.com/openai/CLIP.git",
    "tqdm==4.66.5",
    "requests",
    "opencv-python",
    "mediapipe",
    "pandas",
    "wandb>=0.12.10",
]